# CppPolevoy

./: .gitignore
circlequeue/: circlequeue.h
matrix2d/: matrix2d.h
valdman_b_s/: CMakeLists.txt
valdman_b_s/prj/: CMakeLists.txt
valdman_b_s/prj/arrstack/: CMakeLists.txt  arrstack.cpp  arrstack.h  main.cpp
valdman_b_s/prj/complex/: CMakeLists.txt  complex.cpp  complex.h  complex.sln  complex.vcxproj  complex.vcxproj.filters  testComplex.cpp
valdman_b_s/prj/interfaces/: printablei.h
valdman_b_s/prj/liststack/: CMakeLists.txt  liststack.cpp  liststack.h  main.cpp
valdman_b_s/prj/matrix2d/: CMakeLists.txt  main.cpp  matrix2d.cpp
valdman_b_s/prj/matrix2d/Headers/: matrix2d.h  serializer.h
valdman_b_s/prj/matrix2d/Source/: matrix2d.cpp  serializer.cpp
valdman_b_s/prj/nod/: CMakeLists.txt  nod.cpp  nod.sln  nod.vcxproj  nod.vcxproj.filters
valdman_b_s/prj/rational/: CMakeLists.txt  Rational.vcxproj  Rational.vcxproj.filters  rational.cpp  rational.h  rational.sln  testRational.cpp
valdman_b_s/prj/ssv/: CMakeLists.txt  main.cpp  ssv_service.cpp  ssv_service.h  ssvdata.cpp  ssvdata.h
valdman_b_s/prj/ssv/Headers/: row.h  ssv.h  ssv_service.h
valdman_b_s/prj/ssv/Sources/: row.cpp  ssv.cpp  ssv_service.cpp
valdman_b_s/prj/ssv/demo/: CMakeLists.txt  main.cpp
valdman_b_s/prj/ssv/lib/: CMakeLists.txt  ssvdata.cpp  ssvdata.h
valdman_b_s/prj/vec2d/: CMakeLists.txt  testVector.cpp  vec2d.cpp  vec2d.h  vec2d.sln  vec2d.vcxproj  vec2d.vcxproj.filters
valdman_b_s/prj/vector/: CMakeLists.txt  Vector.cpp  Vector.h  testVector.cpp  vector.cpp  vector.h
